[tool.poetry]
package-mode = false

[project]
name = "deploying-a-deep-learning-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "cvlib (==0.2.7)",
    "opencv-python-headless (==4.9.0.80)",
    "pillow (==10.2.0)",
    "tensorflow (==2.15.0)",
    "uvicorn (==0.29.0)",
    "python-multipart (==0.0.9)",
    "fastapi (==0.110.1)",
    "nest-asyncio (==1.6.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
